# Vortex-V2

./: .env.example  TODO.md  pyproject.toml
src/cogs/: fun.py  general.py
src/utility/: bot.py  util.py
