[tool.poetry]
name = "vortex"
version = "2.0.0"
description = "A multi-purpose Discord bot."
authors = ["Cosmo <cosmin.dulgheru.alex@gmail.com>", "H4ckerxx44 <dennis.wortmann1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
